# dotfiles

./: .Rprofile.m4  .Xmodmap.m4  .Xresources.m4  .bash_aliases  .bash_aliases.m4  .bash_profile  .bash_profile.m4  .bashrc  .bashrc.m4  .env_profile.m4  .gitconfig  .gitconfig.m4  .gitignore  .gitignore_global  .gitignore_global.m4  .gitmodules  .hgrc  .imwheelrc.m4  .isort.cfg.m4  .latexmkrc.m4  .pre-commit-config.yaml  .profile  .profile.m4  .pylint.rc  .pylintrc  .pylintrc.m4  .theanorc.m4  .tmux.conf  .tmux.conf.m4  .tmuxline.conf  .toprc.m4  .vimrc  .vimrc.m4  .xbindkeysrc.m4  .xprofile.m4  LICENSE  Makefile  Makefile-binaries  Makefile-binaries.m4  README.md  (+12 more)
.config/: env_profile.m4  flake8.m4  locale.conf.m4
.duplicacy/: filters.m4
.gkrellm2/: user-config-cpu  user-config-memory
.ssh/: config.m4
.vim/: .gitignore  .ycm_extra_conf.py
.virtualenvs/: global_requirements.txt
clang_complete/: .vimrc.append
customgcc/: .bashrc.append  applies
env/: battery  browser  colours  colours.toml  cuda  dblpbib  default-shell  dmenu  env_utils  feh  fontsize  git-push-default-simple  gkrellm  go  gsimplecal  i3blocks  i3lock  i3lock-extra  icon  ip  keychain  locale  lock  modules  mujoco  netuser  nvidia-smi  osx  paths  perl  playerctl  programs  pulseaudio  python  root  ruby  setxkbmap  shell  sys-monitor  terminal  (+11 more)
fish/: .gitignore  applies
git_push_default_simple/: applies
keychain/: applies
libclang/: .vimrc.append  .vimrc.patch  (+1 more)
src/config/pyproject/templates/root/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
(+329 files in other folders)
